# AIOps

./: .gitignore  README-OTEL-collector.md  README.md
.github/workflows/: main.yaml
baseline/: Dockerfile
bootstrap/: README.md
demo/: .gitignore  README.md
demo/anomaly-llm-faiss/: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt  run.sh
demo/anomaly_isolation_forest/: docker-compose.yaml  release.sh  requirements.txt  train_model.sh
demo/demo-1-basics/: README.md  docker-compose.yaml
demo/demo-2-otel/: README.md  docker-compose-persistance.yml  docker-compose.yml
demo/demo-3-mlflow/: .env  Dockerfile  Dockerfile.client  README.md   docker-compose.yml  train.py
demo/demo-4-kind/: install-kind.sh
demo/demo-4-openshift-network-observability/: README.md
demo/demo-5-kube-edge-platform/: README.md  install-remote-kubeedge-edge.sh  readme.kube-rospberry.md
research/: README.MD
test_harness/: README.md  mlruns.db  pyproject.toml
test_harness/aiops_harness/: __init__.py  cli.py  config.py  metrics.py  runner.py
test_harness/aiops_harness/data/: loaders.py  schema.py
test_harness/aiops_harness/llm/: base.py  llamastack.py  ollama.py  openai_compat.py
test_harness/aiops_harness/pipeline/: correlation.py  executor.py  rca.py  remediation.py
test_harness/examples/configs/: basic.yaml  ollama_llama3.yaml  ollama_mistral.yaml  ollama_qwen.yaml
test_harness/examples/data/: incidents.jsonl  logs.jsonl  metrics.jsonl  traces.jsonl
test_harness/scripts/: setup_local_llms.sh
test_harness/tracking_uri=sqlite:/mlruns.db/0/: meta.yaml
(+1389 files in other folders)
