[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-test-harness"
version = "0.1.0"
description = "AIOps-focused test harness for LLM-driven correlation, RCA, and remediation with MLflow tracking."
authors = [{name = "LFEdge AIOps", email = "aiops@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlflow>=2.12.0",
  "pyyaml>=6.0.1",
  "pydantic>=2.5.0",
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "uvloop>=0.19.0; platform_system == 'Linux'",
]

[project.scripts]
aiops-harness = "aiops_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["aiops_harness*"]
exclude = ["mlruns*", "examples*", "tests*", "dist*", "build*"]

